# airsoft_esp32_system

./: .gitignore  Cargo.toml  _typos.toml
src/: app.rs  devices.rs  events.rs  game.rs  game_state.rs  graphics.rs  keypad.rs  lcd.rs  lib.rs  neopixel.rs  tasks.rs  views.rs  web.rs  wifi.rs
src/app/: main_menu.rs  search_and_destroy.rs
src/devices/: buzzer.rs  keypad.rs  mod.rs  neopixel.rs
src/game_modes/: mod.rs
src/tasks/: ble.rs  display.rs  index.html  input.rs  internal.rs  lights.rs  mod.rs  output.rs  rng.rs  sound.rs  ticker.rs  web.rs  wifi.rs
src/tasks/input/: keypad.rs  nfc.rs
src/tasks/output/: display.rs  display_diff.rs  lights.rs  sound.rs
src/views/: battlefield.rs  csgo.rs  main_menu.rs  mod.rs  search_and_destroy.rs  the_finals.rs
src/views/search_and_destroy/: active.rs  configuration.rs  ended.rs  planted.rs  waiting.rs
