[package]
edition      = "2021"
name         = "airsoft_v2"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "airsoft_v2"
path = "./src/bin/main.rs"

[dependencies]
defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32"] }
esp-hal                = { version = "=1.0.0-rc.0", features = ["defmt", "esp32", "unstable"] }

embassy-net = { version = "0.7.0", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = { version = "0.6.1", features = ["defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
esp-alloc = { version = "0.8.0", features = ["defmt"] }
esp-println = { version = "0.15.0", features = ["defmt-espflash", "esp32"] }
# for more networking protocol support see https://crates.io/crates/edge-net
bt-hci = { version = "0.3.2", features = [] }
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-24576",
] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
esp-hal-embassy = { version = "0.9.0", features = ["defmt", "esp32"] }
esp-wifi = { version = "0.15.0", features = [
  "ble",
  "builtin-scheduler",
  "coex",
  "defmt",
  "esp-alloc",
  "esp32",
  "smoltcp",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
static_cell = "2.1.1"
trouble-host = { version = "0.2.4", features = ["gatt"] }
picoserve = { version = "0.16.0", features = ["alloc", "defmt", "embassy"] }
smart-leds = "0.4.0"
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community.git", features = ["defmt", "esp32"] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
hd44780-driver = { git = "https://github.com/JohnDoneth/hd44780-driver", features = ["async"] }
embedded-hal-async = "1.0.0"
embassy-embedded-hal = { version = "0.4.0", features = ["defmt"] }
esp-hal-mfrc522 = "0.2.1"
esp-hal-buzzer = { version = "0.1.0", features = ["defmt", "esp32"] }
anyhow = { version = "1.0.98", default-features = false }
esp-hal-dhcp-server = "0.2.6"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
